--- a/templates/certificados.html
+++ b/templates/certificados.html
@@ -49,7 +49,7 @@
           &nbsp;- {{ documento.usuario.get_full_name }}
         {% endif %}
         {% if documento.anotacao %}
-          [Obs: {{ documento.anotacao }} ]
+          &nbsp;[Obs: {{ documento.anotacao }}]
         {% endif %}
       </div>
 
