--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -40,7 +40,7 @@
           &nbsp;- {{ documento.usuario.get_full_name }}
         {% endif %}
         {% if documento.anotacao %}
-          [Obs: {{ documento.anotacao }} ]
+          &nbsp;[Obs: {{ documento.anotacao }}]
         {% endif %}
       </div>
 
