--- a/projetos/templates/projetos/despesas.html
+++ b/projetos/templates/projetos/despesas.html
@@ -20,7 +20,7 @@
         <td data-sort="{{despesa.data|date:"Y-m-d"}}">
           {{despesa.data|date:"d/m/Y"}}
         </td>
-        <td>
+        <td style="white-space: nowrap;">
           {% if despesa.valor_r %}R$ {{despesa.valor_r|floatformat:2}}{% endif %}
           {% if despesa.valor_d %}US$ {{despesa.valor_d|floatformat:2}}{% endif %}
         </td>
@@ -29,6 +29,9 @@
         </td>
         <td>
           {% if despesa.projeto %}
+            <a href="{% url 'organizacao_completo' despesa.projeto.organizacao.id %}">
+              [{{despesa.projeto.organizacao}}]
+            </a>
             <a href="{% url 'projeto_completo' despesa.projeto.id %}">
               {{despesa.projeto.get_titulo}}
             </a>
