--- a/estudantes/templates/estudantes/relato_quinzenal.html
+++ b/estudantes/templates/estudantes/relato_quinzenal.html
@@ -141,7 +141,7 @@
       <button type="button" id="feedback-validator" class="feedback-validator">
         <i class="fas fa-check-circle" style="display: none;"></i>
         <i class="fas fa-hourglass fa-spin" style="display: none;"></i>
-        Feedback Validator by <span class="author-name">Tiago Tavares</span>
+        Fortnightly Validator by <span class="author-name">Tiago Tavares</span>
       </button>
     </div>
     <div id="feedback-validator-message"></div>
