--- a/estudantes/templates/estudantes/includes/perguntas_funcionalidade.html
+++ b/estudantes/templates/estudantes/includes/perguntas_funcionalidade.html
@@ -16,41 +16,44 @@
     }
   </style>
 
-  <table class="tabela-padrao table-striped table-hover table-responsive">
+  <table class="tabela-padrao table-striped table-hover table-responsive mb-4" {% if esconde_perg %}style="display: none;"{% endif %}>
     <thead>
       <tr>
         <th class="hide-on-narrow">#</th>
         <th>{% lng "Questão" "Question" %}</th>
-        <th>{% lng "Frequência" "Frequency" %}</th>
+        <th colspan="{{ funcionalidade_grupo|length }}">{% lng "Frequência" "Frequency" %}</th>
       </tr>
     </thead>
     <tbody>
       {% for questao in questoes_funcionalidade.questoes %}
         <tr>
-          <td class="hide-on-narrow" style="text-align:center">{{ forloop.counter }}</td>
-          <td>{{ questao }}</td>
-          <td>
-            {% with question_key="question_"|concat:forloop.counter|stringformat:"s" %}
-              {% with f=funcionalidade_grupo|get_attr:question_key %}
-                {% if ver %}
-                  {% if f == 1 %}<input type="radio" name="question_{{ forloop.counter }}" value="1" checked style="display:none;">{% lng "Baixa" "Low" %}{% endif %}
-                  {% if f == 2 %}<input type="radio" name="question_{{ forloop.counter }}" value="2" checked style="display:none;">{% lng "Média" "Medium" %}{% endif %}
-                  {% if f == 3 %}<input type="radio" name="question_{{ forloop.counter }}" value="3" checked style="display:none;">{% lng "Alta" "High" %}{% endif %}
-                {% else %}
-                  <label><input type="radio" name="question_{{ forloop.counter }}" value="1" {% if f == 1 %}checked{% endif %}> {% lng "Baixa" "Low" %}</label><br>
-                  <label><input type="radio" name="question_{{ forloop.counter }}" value="2" {% if f == 2 %}checked{% endif %}> {% lng "Média" "Medium" %}</label><br>
-                  <label><input type="radio" name="question_{{ forloop.counter }}" value="3" {% if f == 3 %}checked{% endif %}> {% lng "Alta" "High" %}</label>
-                {% endif %}
-              {% endwith %}
+          {% with q=forloop.counter %}
+            <td class="hide-on-narrow" style="text-align:center">{{ q }}</td>
+            <td>{{ questao }}</td>
+            {% with question_key="question_"|concat:q|stringformat:"s" %}
+              {% for funcionalidade in funcionalidade_grupo %}
+                <td>
+                  {% with f=funcionalidade|get_attr:question_key %}
+                    {% if ver %}
+                      {% if f == 1 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="1" checked style="display:none;">{% lng "Baixa" "Low" %}{% endif %}
+                      {% if f == 2 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="2" checked style="display:none;">{% lng "Média" "Medium" %}{% endif %}
+                      {% if f == 3 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="3" checked style="display:none;">{% lng "Alta" "High" %}{% endif %}
+                    {% else %}
+                      <label><input type="radio" name="question_{{ q }}" value="1" {% if f == 1 %}checked{% endif %}> {% lng "Baixa" "Low" %}</label><br>
+                      <label><input type="radio" name="question_{{ q }}" value="2" {% if f == 2 %}checked{% endif %}> {% lng "Média" "Medium" %}</label><br>
+                      <label><input type="radio" name="question_{{ q }}" value="3" {% if f == 3 %}checked{% endif %}> {% lng "Alta" "High" %}</label>
+                    {% endif %}
+                  {% endwith %}
+                </td>
+              {% endfor %}
             {% endwith %}
-          </td>
+          {% endwith %}
         </tr>
       {% endfor %}
     </tbody>
   </table>
-  <br><br>
 
-  <h4>Disfunções da Equipe</h4>
+  <h5>Disfunções de Equipe</h5>
   <table id="disfuncoes" class="table-hover table-condensed table-responsive">
     <tbody>
       {% for disfuncao in questoes_funcionalidade.disfuncoes %}
@@ -83,27 +86,30 @@
         }
       });
 
+      
       for (var key = 0; key < scores.length; key++) {
         $('#d' + key).text(scores[key]);
-        var message = "";
-        var color = "";
-        if (scores[key] > 2 && scores[key] < 6) {
-            message = "disfunção precisa ser trabalhada";
-            color = "#ffcccc";
-        } else if (scores[key] > 7) {
-            message = "disfunção provavelmente não é um problema em sua equipe";
-            color = "#ccffcc";
-        } else if (scores[key] > 5 && scores[key] < 8) {
-            message = "disfunção pode ser um problema";
-            color = "#ffffcc";
-        } else {
-            message = "";
-            color = "#ffffff";
-        }
-        $("#o" + key).text(message);
-        $("#r" + key).css("background-color", color);
-    }
-    
+        {% if funcionalidade_grupo|length <= 1 %}
+          var message = "";
+          var color = "";
+          if (scores[key] > 2 && scores[key] < 6) {
+              message = "disfunção precisa ser trabalhada";
+              color = "#ffcccc";
+          } else if (scores[key] > 7) {
+              message = "disfunção provavelmente não é um problema em sua equipe";
+              color = "#ccffcc";
+          } else if (scores[key] > 5 && scores[key] < 8) {
+              message = "disfunção pode ser um problema";
+              color = "#ffffcc";
+          } else {
+              message = "";
+              color = "#ffffff";
+          }
+          $("#o" + key).text(message);
+          $("#r" + key).css("background-color", color);
+        {% endif %}
+      }
+
     };
 
     $(document).ready(function() {
