--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -524,6 +524,7 @@
 
   {% if user.prof_a %}
     {% include "estudantes/includes/conduta_respostas.html" with grupo=True %}
+    {% include "estudantes/includes/funcionalidade_respostas.html" with esconde_perg=True %}
   {% endif %}
 
   {% if user.prof_a %}
