concluido Ponderação de Pares

--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -525,6 +525,7 @@
   {% if user.prof_a %}
     {% include "estudantes/includes/conduta_respostas.html" with grupo=True %}
     {% include "estudantes/includes/funcionalidade_respostas.html" with esconde_perg=True %}
+    {% include "estudantes/includes/pares_respostas.html" %}
   {% endif %}
 
   {% if user.prof_a %}
