não mostrando edições quando selecionado projeto

--- a/professores/templates/professores/avaliacoes_pares.html
+++ b/professores/templates/professores/avaliacoes_pares.html
@@ -15,7 +15,9 @@
 
 {% block content %}
 
-  {% include "edicoes.html" %}
+  {% if not proj_id %}
+    {% include "edicoes.html" %}
+  {% endif %}
 
   <div id="atualizar">
 
