--- a/professores/templates/professores/entrega_avaliar.html
+++ b/professores/templates/professores/entrega_avaliar.html
@@ -18,7 +18,7 @@
 {% block content %}
 
   {% if projeto %}
-    <form method="post" id="avaliacaoform" enctype="multipart/form-data">{% csrf_token %}
+    <form method="post" enctype="multipart/form-data">{% csrf_token %}
 
       {% include "cabecalho_projeto.html" with com_grupo=True %}
 
